fix input group vertical alignment

--- a/assets/sass/material/_text-field-input-group.scss
+++ b/assets/sass/material/_text-field-input-group.scss
@@ -4,13 +4,14 @@
   width: 100%;
 
   .form-control {
-    align-self: center;
+    align-items: center;
     flex: 1 1 auto;
     width: 1%;
   }
 }
 
 .input-group-addon {
+  align-items: center;
   color: inherit;
   display: flex;
   font-size: ($material-icon-size / $font-size-root * 1rem / $textfield-font-size * $textfield-font-size);
