--- a/css/material.css
+++ b/css/material.css
@@ -7731,10 +7731,10 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
   width: 100%;
 }
 .input-group .form-control, .input-group .custom-select {
-  -webkit-align-self: center;
-      -ms-flex-item-align: center;
-              -ms-grid-row-align: center;
-          align-self: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-flex: 1;
   -webkit-flex: 1 1 auto;
       -ms-flex: 1 1 auto;
@@ -7743,6 +7743,10 @@ input[type="color"].form-control-sm, .floating-label-sm > input[type="color"].fo
 }
 
 .input-group-addon {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: inherit;
   display: -webkit-box;
   display: -webkit-flex;
